Tue Jun 12 11:34:23 2001  Brian Gough  <bjg@network-theory.co.uk>

	* rkf45.c: added Runge-Kutta Fehlberg method, RKF45

	* reorganized to use standard gsl conventions

Mon Apr 23 10:26:22 2001  Brian Gough  <bjg@network-theory.co.uk>

	* unified error handling conventions to _e for error handling
 	functions and no suffix for plain functions, so _impl functions
 	are no longer needed.

	* removed tests for EFAULT, since EFAULT should only apply to
 	invalid non-null pointers.

2000-05-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am (test_LDADD): put libgslpermutation ahead of
	libgslvector in the link beccause the former uses
	`gsl_check_range' which is defined in the latter.

Tue Apr 11 19:59:01 2000  Brian Gough  <bjg@network-theory.co.uk>

	* bsimp.c (bsimp_step_local): changed gsl_la prefix to gsl_linalg,
 	new naming convention
	

Fri Oct  1 15:46:13 1999  Brian Gough  <bjg@network-theory.co.uk>

	* bsimp.c: converted to use new-style block/vector code
